--- a/Resultate.tex
+++ b/Resultate.tex
@@ -188,7 +188,8 @@ Abb. \ref{pic:pic22} zeigt die Netzdiagramme für die VT1. Abb. \ref{subpic:pic1
 %
 \begin{figure}[H]
 	\centering
-	\includegraphics[scale=0.7]{Bilder/mean_vslope}
+	%\includegraphics[scale=0.7]{Bilder/mean_vslope}
+	\includegraphics[scale=1]{Bilder/vslope.eps}
 	\caption[Differenzen der V-Slope-Ergebnisse zwischen Ratern und Software]{Differenzen zwischen den Mittelwerten für die VT1 von Ratern und Software, die durch den V-Slope bestimmt wurden; rote Linie: Mean = Mittelwert der Rater-Software-Differenz, SD~=~Standardabweichung der Rater-Software-Ergebnisse}
 	\label{pic:pic23}
 \end{figure}
