--- a/Anhang.tex
+++ b/Anhang.tex
@@ -1,5 +1,11 @@
 \chapter{Technische Daten des Flowsensors}
-\includepdf[pages=3]{Anhang/FS6112H.pdf}
+\includepdf[pages=3]{Anhang/FS6122H.pdf}
 
 \chapter{Technische Daten des \gls{VCO2}/\gls{VO2}-Sensor-Moduls}
 \includepdf[pages=3-7]{Anhang/AION.pdf}
+
+\chapter{Programmcode des MATLAB-Programms}
+\includepdf[pages=-]{Anhang/Flowcalculation2.pdf}
+\includepdf[pages=-]{Anhang/breathcalculation.pdf}
+\includepdf[pages=-]{Anhang/co2calculation2.pdf}
+%\includepdf{Anhang/EQ_VT.pdf}
