Rev 3.0.3: VT1-Netzdiagramme vektorisiert

--- a/Resultate.tex
+++ b/Resultate.tex
@@ -171,14 +171,14 @@ Abb. \ref{pic:pic22} zeigt die Netzdiagramme für die VT1. Abb. \ref{subpic:pic1
 	\centering
 	\begin{subfigure}[c]{0.45\textwidth}
 		\centering
-		\includegraphics[scale=0.7]{Bilder/v-slope_net}
+		\includegraphics[scale=0.42]{Bilder/v-slope_net.eps}
 			\subcaption[Vergleich der VT1-Bestimmungen durch V-Slope]{Vergleich der VT1-Bestimmungen durch V-Slope zwischen Ratern und Software; Intervall: \SIrange{0}{160}{\per\minute}}
 			\label{subpic:pic1}
 	\end{subfigure}%
 	\hfil
 	\begin{subfigure}[c]{0.45\textwidth}
 		\centering
-		\includegraphics[scale=0.7]{Bilder/eqo2_net}
+		\includegraphics[scale=0.42]{Bilder/eqo2_net.eps}
 			\subcaption[Vergleich der VT1-Bestimmungen durch das \gls{EQO2}]{Vergleich der VT1-Bestimmungen durch das \gls{EQO2} zwischen Ratern und Software; Intervall: \SIrange{0}{180}{\per\minute}}
 			\label{subpic:pic2}
 	\end{subfigure}
