Rev: 3.1: Alle Diagramme vektorisiert. Linkbreaks im Literaturverzeichnis im header aktiviert. biblatex im header verschoben.

--- a/Referenzen.bib
+++ b/Referenzen.bib
@@ -114,7 +114,7 @@ publisher = {Springer Verlag}
  year = {2012},
  title = {Positionspapier der AG-Spiroergometrie zu ventilatorischen und Laktatschwellen},
  author = {Westhoff, M. and Lehnigk, B. and R{\"u}hle, K.-H. and Greiwing, A. and Schomaker, R. and Eschenbacher, H. and Siepmann, M.},
- url = {https://www.mesics.de/fileadmin/user/literature/Spiroergometrie/},
+ url = {https://www.mesics.de/fileadmin/user/literature/Spiroergometrie/AG-Spiroergometrie_Positionspapier-Schwellen.pdf},
  note= {zuletzt abgerufen am 25.04.2018}
 }
 
