--- a/Resultate.tex
+++ b/Resultate.tex
@@ -171,14 +171,14 @@ Abb. \ref{pic:pic22} zeigt die Netzdiagramme für die VT1. Abb. \ref{subpic:pic1
 	\centering
 	\begin{subfigure}[c]{0.45\textwidth}
 		\centering
-		\includegraphics[scale=0.42]{Bilder/v-slope_net.eps}
+		\includegraphics[scale=0.4]{Bilder/v-slope_net.eps}
 			\subcaption[Vergleich der VT1-Bestimmungen durch V-Slope]{Vergleich der VT1-Bestimmungen durch V-Slope zwischen Ratern und Software; Intervall: \SIrange{0}{160}{\per\minute}}
 			\label{subpic:pic1}
 	\end{subfigure}%
 	\hfil
 	\begin{subfigure}[c]{0.45\textwidth}
 		\centering
-		\includegraphics[scale=0.42]{Bilder/eqo2_net.eps}
+		\includegraphics[scale=0.4]{Bilder/eqo2_net.eps}
 			\subcaption[Vergleich der VT1-Bestimmungen durch das \gls{EQO2}]{Vergleich der VT1-Bestimmungen durch das \gls{EQO2} zwischen Ratern und Software; Intervall: \SIrange{0}{180}{\per\minute}}
 			\label{subpic:pic2}
 	\end{subfigure}
@@ -189,15 +189,16 @@ Abb. \ref{pic:pic22} zeigt die Netzdiagramme für die VT1. Abb. \ref{subpic:pic1
 \begin{figure}[H]
 	\centering
 	%\includegraphics[scale=0.7]{Bilder/mean_vslope}
-	\includegraphics[scale=1]{Bilder/vslope.eps}
-	\caption[Differenzen der V-Slope-Ergebnisse zwischen Ratern und Software]{Differenzen zwischen den Mittelwerten für die VT1 von Ratern und Software, die durch den V-Slope bestimmt wurden; rote Linie: Mean = Mittelwert der Rater-Software-Differenz, SD~=~Standardabweichung der Rater-Software-Ergebnisse}
+	\includegraphics[scale=0.95]{Bilder/vslope.eps}
+	\caption[Differenzen der V-Slope-Ergebnisse zwischen Ratern und Software]{Differenzen zwischen den Mittelwerten für die VT1 von Ratern und Software durch V-Slope; Mean = Mittelwert von $\Delta$ Rater-Software, SD~=~Standardabweichung}
 	\label{pic:pic23}
 \end{figure}
 %
 \begin{figure}[H]
 	\centering
-	\includegraphics[scale=0.7]{Bilder/mean_eqo2}
-	\caption[Differenzen der \gls{EQO2}-Ergebnisse zwischen Ratern und Software]{Differenzen zwischen den Mittelwerten für die VT1 von Ratern und Software, die durch das \gls{EQO2} bestimmt wurden; rote Linie: Mean = Mittelwert der Rater-Software-Differenz, SD~=~Standardabweichung der Rater-Software-Ergebnisse}
+	%\includegraphics[scale=0.7]{Bilder/mean_eqo2}
+	\includegraphics[scale=0.95]{Bilder/eqo2.eps}
+	\caption[Differenzen der \gls{EQO2}-Ergebnisse zwischen Ratern und Software]{Differenzen zwischen den Mittelwerten für die VT1 von Ratern und Software durch das \gls{EQO2}; Mean = Mittelwert von $\Delta$ Rater-Software, SD~=~Standardabweichung}
 	\label{pic:pic24}
 \end{figure}
 %
@@ -257,14 +258,14 @@ In Tab. \ref{tab:tabelle6} sind die Werte für die \gls{HF} eingetragen, an dene
 	\centering
 	\begin{subfigure}[c]{0.45\textwidth}
 		\centering
-		\includegraphics[scale=0.7]{Bilder/eqco2_net}
+		\includegraphics[scale=0.4]{Bilder/eqco2_net.eps}
 		\subcaption[Vergleich der VT2-Bestimmungen durch das \gls{EQCO2}]{Vergleich der VT2-Bestimmungen durch das \gls{EQCO2} zwischen Ratern und Software; Intervall: \SIrange{0}{250}{\per\minute}}
 		\label{subpic:pic3}
 	\end{subfigure}%
 	\hfil
 	\begin{subfigure}[c]{0.45\textwidth}
 		\centering
-		\includegraphics[scale=0.7]{Bilder/ve_vco2_net}
+		\includegraphics[scale=0.4]{Bilder/vevco2_net.eps}
 		\subcaption[Vergleich der VT2-Bestimmungen durch \gls{VE}/\gls{VCO2}]{Vergleich der VT2-Bestimmungen durch \gls{VE}/\gls{VCO2} zwischen Ratern und Software; Intervall: \SIrange{0}{250}{\per\minute}}
 		\label{subpic:pic4}
 	\end{subfigure}
@@ -276,8 +277,9 @@ Abb. \ref{pic:pic25} zeigt die Netzdiagramme für die VT2-Ergebnisse durch das \
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[scale=0.7]{Bilder/mean_eqco2}
-	\caption[Differenzen der \gls{EQCO2}-Ergebnisse zwischen Ratern und Software]{Differenzen zwischen den Mittelwerten für die VT1 von Ratern und Software, die durch das \gls{EQCO2} bestimmt wurden; rote Linie: Mean = Mittelwert der Rater-Software-Differenz, SD~=~Standardabweichung der Rater-Software-Ergebnisse}
+	%\includegraphics[scale=0.7]{Bilder/mean_eqco2}
+	\includegraphics[scale=0.95]{Bilder/eqco2.eps}
+	\caption[Differenzen der \gls{EQCO2}-Ergebnisse zwischen Ratern und Software]{Differenzen zwischen den Mittelwerten für die VT1 von Ratern und Software durch das \gls{EQCO2}; Mean = Mittelwert von $\Delta$ Rater-Software, SD~=~Standardabweichung}
 	\label{pic:pic26}
 \end{figure}
 %
@@ -285,8 +287,9 @@ In Abb. \ref{pic:pic26} ist die Streuung der \gls{EQCO2}-Methode dargestellt. Di
 %
 \begin{figure}[H]
 	\centering
-	\includegraphics[scale=0.7]{Bilder/mean_vevco2}
-	\caption[Differenzen der \gls{VE}/\gls{VCO2}-Ergebnisse zwischen Ratern und Software]{Differenzen zwischen den Mittelwerten für die VT1 von Ratern und Software, die durch \gls{VE}/\gls{VCO2} bestimmt wurden; rote Linie: Mean = Mittelwert der Rater-Software-Differenz, SD~=~Standardabweichung der Rater-Software-Ergebnisse}
+	%\includegraphics[scale=0.7]{Bilder/mean_vevco2}
+	\includegraphics[scale=0.95]{Bilder/vevco2.eps}
+	\caption[Differenzen der \gls{VE}/\gls{VCO2}-Ergebnisse zwischen Ratern und Software]{Differenzen zwischen den Mittelwerten für die VT1 von Ratern und Software durch \gls{VE}/\gls{VCO2}; Mean = Mittelwert von $\Delta$ Rater-Software, SD~=~Standardabweichung}
 	\label{pic:pic27}
 \end{figure}
 %
