--- a/header.tex
+++ b/header.tex
@@ -9,7 +9,6 @@
 \usepackage{times}
 \fontfamily{ptm}\selectfont
 \KOMAoptions{DIV=last}
-\usepackage[autostyle=true,german=quotes]{csquotes}
 \usepackage[final,babel]{microtype}
 
 \setkomafont{disposition}{\normalcolor\bfseries}
@@ -33,18 +32,6 @@
 \DeclareMicrotypeSet*[tracking]{my}%
   { font = */*/*/sc/* }%
 \SetTracking{ encoding = *, shape = sc }{ 45 }
-
-
-\usepackage[
-backend=biber,
-style=iso-numeric,
-autolang=other,
-bibencoding=UTF8,
-maxnames=3
-]{biblatex}
-
-\DefineBibliographyStrings{ngerman}{andothers={et\ al\adddot}}
-\addbibresource{Referenzen.bib}
 
 
 \usepackage[left=30mm, right=30mm]{geometry}
@@ -124,25 +111,6 @@ basicstyle=\footnotesize,
 \date{\mydate}
 \publishers{Fachhochschule Lübeck\\ --- Fachbereich Angewandte Naturwissenschaften}
 
-\usepackage{hyperref}
-\hypersetup{
-	unicode=false,
-	pdftoolbar=true,
-	pdfmenubar=true,
-	pdffitwindow=false,
-	pdfstartview={FitH},
-	pdfborder={Thema der Arbeit},
-	pdftitle={Thema der Arbeit},
-	pdfauthor={Julian-Marvin Lütten},
-	pdfsubject={Bachelorthesis},
-	pdfnewwindow=true,
-	colorlinks=true,
-	linkcolor=black,
-	citecolor=black,
-	filecolor=black,
-	urlcolor=black
-}
-
 \usepackage[nomain,nonumberlist,nopostdot,nogroupskip,style=super,acronym,xindy,toc]{glossaries}
 \newcommand{\myglsgen}[1]{%
 	\glsdoifexists{#1}%
@@ -160,6 +128,43 @@ basicstyle=\footnotesize,
 \makeglossaries
 \usepackage[xindy]{imakeidx}
 \makeindex
+
+\usepackage[autostyle=true,german=quotes]{csquotes}
+\usepackage[
+backend=biber,
+style=iso-numeric,
+autolang=other,
+bibencoding=UTF8,
+maxnames=3,
+hyperref
+]{biblatex}
+
+\DefineBibliographyStrings{ngerman}{andothers={et\ al\adddot}}
+\addbibresource{Referenzen.bib}
+
+\apptocmd{\UrlBreaks}{\do\f\do\m}{}{}
+\setcounter{biburllcpenalty}{9000}% Kleinbuchstaben
+\setcounter{biburlucpenalty}{9000}% Großbuchstaben
+
+\usepackage{hyperref}
+\hypersetup{
+	unicode=false,
+	pdftoolbar=true,
+	pdfmenubar=true,
+	pdffitwindow=false,
+	pdfstartview={FitH},
+	pdfborder={Thema der Arbeit},
+	pdftitle={Thema der Arbeit},
+	pdfauthor={Julian-Marvin Lütten},
+	pdfsubject={Bachelorthesis},
+	pdfnewwindow=true,
+	colorlinks=true,
+	linkcolor=black,
+	citecolor=black,
+	filecolor=black,
+	urlcolor=black,
+	breaklinks=true
+}
 
 \endinput
 
