Rev. 3.1.1: Vektor-Diagramme optimiert.

--- a/Diskussion.tex
+++ b/Diskussion.tex
@@ -62,7 +62,7 @@ Die Kategorisierung wurde aus zeitlichen Gründen mit der ersten Version der gra
 	\centering
 	%\includegraphics[scale=0.7]{Bilder/r_eqco2}
 	\includegraphics[scale=0.95]{Bilder/korr_eqco2.eps}
-	\caption[Korrelation der \gls{EQCO2}-Werte von Ratern und Software]{Korrelation der VT2 mit \gls{EQCO2} von Ratern und Software in Form einer Regressionsgeraden; aufgetragen wird die gemittelte VT2 der Rater gegenüber der VT2 der Software in \si{\per\minute}}
+	\caption[Korrelation der \gls{EQCO2}-Werte von Ratern und Software]{Korrelation der mit dem \gls{EQCO2} bestimmten VT2 von Ratern und Software in Form einer Regressionsgeraden; aufgetragen wird die gemittelte VT2 der Rater gegenüber der VT2 der Software in \si{\per\minute}}
 	\label{pic:pic28}
 \end{figure}
 %
