Rev. 3.1.2: Abstract und Resultate gemäß Lucas Feedback korrigiert.

--- a/Diskussion.tex
+++ b/Diskussion.tex
@@ -13,7 +13,7 @@ Anschließend werden potentielle Fehlerquellen sowie eventuelle Defizite der Dur
 
 \section{Spiroergometrie mit dem metabolicscan}
 
-Da nach den Spiroergometrie-Tests für alle Probanden Plots generiert wurden, in denen die Veränderungen der \gls{VE}, \gls{VO2} und \gls{VCO2} erkennbar und nachvollziehbar waren, kann geschlussfolgert werden, dass der metabolicscan in Verbindung mit der \gls{CCPS} und Fahrradergometern grundsätzlich zur Durchführung der Spiroergometrie genutzt werden kann. Während der Messungen wurden keine Störungen oder Fehler der verbauten Sensoren festgestellt. Die maximal gemessene \gls{AF} bei den Testmessungen betrug \SI{52,5}{\per\minute} und liegt damit innerhalb der Grenzen des \gls{O2}-Sensors. Mit \SI{136,27}{\litre\per\minute} befindet sich auch die maximal gemessene \gls{VE} unterhalb des Maximums des Flowsensors. Der metabolicscan wurde vor dem Projekt mithilfe eines Lungensimulators bei Atemfrequenzen zwischen \SIlist{6;50}{\per\minute} und unterschiedlichen Gaskonzentrationen kalibriert, weswegen ausgeschlossen werden kann, dass die Sensoren fehlerhaft waren. Zudem wird jeder produzierte metabolicscan mithilfe einer Ausgleichskurve für die Flowmessung angepasst, die in die Gerätekalibrierung zu Beginn einer Messung implementiert ist. Dennoch können Abweichungen in der Messtechnik nicht vollkommen ausgeschlossen werden.\\
+Während der Messungen wurden keine Störungen oder Fehler der verbauten Sensoren festgestellt. Die maximal gemessene \gls{AF} bei den Testmessungen betrug \SI{52,5}{\per\minute} und liegt damit innerhalb der Grenzen des \gls{O2}-Sensors. Mit \SI{136,27}{\litre\per\minute} befindet sich auch die maximal gemessene \gls{VE} unterhalb des Maximums des Flowsensors. Der metabolicscan wurde vor dem Projekt mithilfe eines Lungensimulators bei Atemfrequenzen zwischen \SIlist{6;50}{\per\minute} und unterschiedlichen Gaskonzentrationen kalibriert, weswegen ausgeschlossen werden kann, dass die Sensoren fehlerhaft waren. Zudem wird jeder produzierte metabolicscan mithilfe einer Ausgleichskurve für die Flowmessung angepasst, die in die Gerätekalibrierung zu Beginn einer Messung implementiert ist. Dennoch können Abweichungen in der Messtechnik nicht vollkommen ausgeschlossen werden. Da aber nach den Tests für alle Probanden Plots generiert wurden, in denen die Veränderungen der \gls{VE}, \gls{VO2} und \gls{VCO2} erkennbar waren, ist davon auszugehen, dass der metabolicscan in Verbindung mit der \gls{CCPS} und Fahrradergometern grundsätzlich zur Durchführung der Spiroergometrie mit nachfolgender Auswertung genutzt werden kann.\\
 \clearpage
 Alle Grafiken wurden bezüglich ihrer Qualität zunächst subjektiv und unbeeinflusst von anderen Personen in die Kategorien Gut und Kritisch einsortiert, um zu überprüfen, ob mit den Rohdaten des metabolicscan hinreichende Plots zur Schwellenbestimmung erstellt werden. Plots, die optisch mithilfe einer jeweiligen Methode direkt auszuwerten waren und außerdem keine schwerwiegenden Artefakte aufwiesen, wurden als gut deklariert. In die Rubrik Kritisch kamen jene Graphen, die beispielsweise unregelmäßige Kurvenverläufe aufwiesen und dadurch nur sehr differenziert evaluiert werden konnten. Tab. \ref{tab:tabelle7} zeigt die Kategorien und Zuordnungen.
 %
