--- a/Resultate.tex
+++ b/Resultate.tex
@@ -1,6 +1,6 @@
 \chapter{Resultate}
 %
-In diesem Kapitel werden ausgewählte Messergebnisse vorgeführt. Zu Beginn werden einige Plots präsentiert, die für die Auswertung verwendet wurden. Anschließend werden Unterschiede zwischen den Ergebnissen aufgezeigt, die im nächsten Kapitel für die Evaluierung der Methoden diskutiert werden. Alle Messungen wurden ohne Störungen oder Fehler von außerhalb erfolgreich durchgeführt.\\
+Zu Beginn dieses Kapitels werden einige Plots präsentiert, die für die Auswertung verwendet wurden. Anschließend werden Unterschiede zwischen den Ergebnissen aufgezeigt, die im nächsten Kapitel für die Evaluierung der Methoden diskutiert werden. Alle Messungen wurden ohne Störungen oder Fehler von außerhalb erfolgreich durchgeführt.\\
 Die nachfolgende Tab. \ref{tab:tabelle4} zeigt zu jeder Testperson die vorab ermittelte Ruhe-\gls{HF}, die während der Leistungsdiagnostik \gls{HFmax} sowie die \gls{Wstart}, die \gls{Wmax} und die \acrfull{VO2max}. 16 von 28 Personen mussten die Belastungsphase laut eigener Aussage wegen Beinschwäche beenden. Zehn Probanden erreichten nach Selbsteinschätzung ihr konditionales Maximum. Zwei Personen klagten in der letzten Stufe über Atemnot und mussten den Test deshalb abbrechen.
 %
 \begin{table}[H]
