Rev. 3.1.2: Einige Fehlerkorrekturen.

--- a/Acronym.tex
+++ b/Acronym.tex
@@ -44,7 +44,7 @@
 	\newacronym{CSV}{CSV}{Comma-separated values}
 	\newacronym{ID}{ID}{Identifikator}
 	\newacronym{HFmax}{HF\textsubscript{max}}{maximal erreichte Herzfrequenz}
-	\newacronym{VO2max}{\.{V}O\textsubscript{2max}}{absolute maximale Sauerstoffaufnahme}
+	\newacronym[user1=absoluten maximalen Sauerstoffaufnahme]{VO2max}{\.{V}O\textsubscript{2max}}{absolute maximale Sauerstoffaufnahme}
 	\newacronym{SD}{SD}{Standardabweichung}
 	\newacronym{REKOM}{REKOM}{Regeneratives/Kompensatorisches Training}
 	\newacronym{GA1}{GA1}{Extensives Grundlagentraining}
