--- a/Diskussion.tex
+++ b/Diskussion.tex
@@ -121,7 +121,7 @@ In der Tabelle werden die gemessenen \gls{VO2max}-Werte der einzelnen Probanden 
 %
 \begin{table}[H]
 	\centering
-	\caption{Vergleich der innerhalb der Testmessungen erhobenen \gls{VO2max} mit Daten der HUNT 3 Studie, abhängig von Geschlecht und Alter}
+	\caption{Vergleich der innerhalb der Testmessungen erhobenen \myglsgen{VO2max} mit Daten der HUNT 3 Studie, abhängig von Geschlecht und Alter}
 	\medskip
 	\begin{tabulary}{\textwidth}{L C C C}
 		\toprule
