--- a/Diskussion.tex
+++ b/Diskussion.tex
@@ -15,7 +15,7 @@ Anschließend werden potentielle Fehlerquellen sowie eventuelle Defizite der Dur
 
 Während der Messungen wurden keine Störungen oder Fehler der verbauten Sensoren festgestellt. Die maximal gemessene \gls{AF} bei den Testmessungen betrug \SI{52,5}{\per\minute} und liegt damit innerhalb der Grenzen des \gls{O2}-Sensors. Mit \SI{136,27}{\litre\per\minute} befindet sich auch die maximal gemessene \gls{VE} unterhalb des Maximums des Flowsensors. Der metabolicscan wurde vor dem Projekt mithilfe eines Lungensimulators bei Atemfrequenzen zwischen \SIlist{6;50}{\per\minute} und unterschiedlichen Gaskonzentrationen kalibriert, weswegen ausgeschlossen werden kann, dass die Sensoren fehlerhaft waren. Zudem wird jeder produzierte metabolicscan mithilfe einer Ausgleichskurve für die Flowmessung angepasst, die in die Gerätekalibrierung zu Beginn einer Messung implementiert ist. Dennoch können Abweichungen in der Messtechnik nicht vollkommen ausgeschlossen werden. Da aber nach den Tests für alle Probanden Plots generiert wurden, in denen die Veränderungen der \gls{VE}, \gls{VO2} und \gls{VCO2} erkennbar waren, ist davon auszugehen, dass der metabolicscan in Verbindung mit der \gls{CCPS} und Fahrradergometern grundsätzlich zur Durchführung der Spiroergometrie mit nachfolgender Auswertung genutzt werden kann.\\
 \clearpage
-Alle Grafiken wurden bezüglich ihrer Qualität zunächst subjektiv und unbeeinflusst von anderen Personen in die Kategorien Gut und Kritisch einsortiert, um zu überprüfen, ob mit den Rohdaten des metabolicscan hinreichende Plots zur Schwellenbestimmung erstellt werden. Plots, die optisch mithilfe einer jeweiligen Methode direkt auszuwerten waren und außerdem keine schwerwiegenden Artefakte aufwiesen, wurden als gut deklariert. In die Rubrik Kritisch kamen jene Graphen, die beispielsweise unregelmäßige Kurvenverläufe aufwiesen und dadurch nur sehr differenziert evaluiert werden konnten. Tab. \ref{tab:tabelle7} zeigt die Kategorien und Zuordnungen.
+Alle 6-Felder-Grafiken wurden bezüglich ihrer Qualität zunächst subjektiv und unbeeinflusst von anderen Personen in die Kategorien Gut und Kritisch einsortiert, um zu überprüfen, ob mit den Rohdaten des metabolicscan hinreichende Plots zur Schwellenbestimmung erstellt werden. Plots, die optisch mithilfe einer jeweiligen Methode direkt auszuwerten waren und außerdem keine schwerwiegenden Artefakte aufwiesen, wurden als gut deklariert. In die Rubrik Kritisch kamen jene Graphen, die beispielsweise unregelmäßige Kurvenverläufe aufwiesen und dadurch nur sehr differenziert evaluiert werden konnten. Tab. \ref{tab:tabelle7} zeigt die Kategorien und Zuordnungen.
 %
 \begin{table}[H]
 	\begin{center}
@@ -45,14 +45,14 @@ Mit 64~\% wurde der Großteil aller Plots zur Bestimmung der VT1 als kritisch be
 %
 \subsection{Kriterien für die optische Bewertung der Plots}
 %
-Nachfolgend werden Eigenschaften aufgelistet, anhand derer ein einzelner Plot als gut deklariert wurde. Um gut auswerten zu können, mussten die V-Slope-Kurven und die dazugehörigen \gls{HF}-Kurven differenzierbar sein. Nur so konnte der überproportionale Anstieg der \gls{VCO2} erkannt werden. War diese Eigenschaft nicht erfüllt, wenn es beim V-Slope für einen X-Wert mehrere Y-Werte gab, so wurde der Graph als kritisch bezeichnet. Einige V-Slopes besaßen allerdings auch sehr dicht beieinander gelegene Messpunkte, sodass Steigungsänderungen optisch schwierig zu erkennen waren. Auch diese Plots wurden als kritisch kategorisiert.\\
+Nachfolgend werden Eigenschaften aufgelistet, anhand derer ein einzelner Plot als gut deklariert wurde. Um gut auswerten zu können, mussten die V-Slope-Kurven und die dazugehörigen \gls{HF}-Kurven differenzierbar sein. Nur so konnte der überproportionale Anstieg der \gls{VCO2} erkannt werden. Wenn beim V-Slope einem X-Wert mehrere Y-Werte entsprachen, wurde der Graph als kritisch bezeichnet. Einige V-Slopes besaßen allerdings auch sehr dicht beieinander gelegene Messpunkte, sodass Steigungsänderungen optisch schwierig zu erkennen waren. Auch diese Plots wurden als kritisch kategorisiert.\\
 Bei guten \gls{EQO2}-Kurven wurde für die VT1-Bestimmung erwartet, dass sie einen eindeutig zu detektierenden Tiefpunkt besaßen, auf den eine von dort an stetige Zunahme folgte. Wenn die Kurven jedoch Schwankungen innehatten oder aber mehrere, optisch auf relativ gleicher Höhe liegende Tiefpunkte aufwiesen, waren sie kritisch.\\
 Ähnliches galt für die VT2-Bestimmung mittels \gls{EQCO2}. Gut waren die Graphen, die eine annähernd Badewannen-ähnliche Form besaßen, sodass im fortgeschrittenen Messverlauf ein deutlich sichtbarer Anstieg zu erkennen war. Es wurden bei den Tests jedoch auch Plots generiert, in denen diese Kurven ebenfalls Schwankungen aufwiesen, sodass mehrere, potentiell als VT2 assoziierbare \gls{EQCO2}-Steigungen existierten. Diese Grafiken galten als kritisch.\\
 Für \gls{VE}/\gls{VCO2} wurden ähnliche Voraussetzungen gestellt, wie für den V-Slope. Auch diese Graphen mussten differenzierbar sein und durften keine zackigen Verläufe annehmen. Auch hier sorgten einige Messpunkte mit optisch geringem Abstand für eine erschwerte, kritische Schwellenbestimmung. 
 %
 \section{Evaluierung der Methoden zur Schwellenbestimmung}
 %
-Die Kategorisierung wurde aus zeitlichen Gründen mit der ersten Version der grafischen Auswertung der Rohdaten vorgenommen. In Folge der Analyse der erstellten Grafiken wurde ein Fehler im MATLAB-Skript bei der Berechnung der \gls{AF} anhand des gemessenen Flows festgestellt. Es sollten zukünftig neue Testmessungen bzw. eine erneute Auswertung der neu generierten Plots durchgeführt werden, da die Erkenntnisse dadurch abweichen können. Dies lies allerdings der zeitliche Rahmen der Arbeit nicht zu.
+Die Kategorisierung wurde aus zeitlichen Gründen mit der ersten Version der grafischen Auswertung der Rohdaten vorgenommen. In Folge der Analyse der erstellten Grafiken wurde ein Fehler im MATLAB-Skript bei der Berechnung der \gls{AF} anhand des gemessenen Flows festgestellt. Nach einem erneuten Durchlauf des MATLAB-Programms konnte das Problem mit den meisten undifferenzierbaren Graphen behoben werden. Es sollten dementsprechend zukünftig neue Testmessungen bzw. eine erneute Auswertung der neu generierten Plots durchgeführt werden, da die Erkenntnisse dadurch abweichen können. Dies lies allerdings der zeitliche Rahmen der Arbeit nicht zu.
 %
 \subsection{\gls{EQCO2} als optimale Methode}
 %
@@ -66,9 +66,32 @@ Die Kategorisierung wurde aus zeitlichen Gründen mit der ersten Version der gra
 	\label{pic:pic28}
 \end{figure}
 %
-Die Regressionsgerade in Abb. \ref{pic:pic28} zeigt die hohe Korrelation mit dem Bestimmheitsmaß $R^2 = 0,83$ zwischen Ratern und Software bei der mit \gls{EQCO2} bestimmten VT2 noch einmal grafisch.\\
-Einen guten Plot stellt beispielhaft Abb. \ref{pic:pic20} dar, bei der ein deutlicher Anstieg der \gls{EQCO2}-Kurve beobachtet werden kann. In Abb. \ref{subpic:pic3} ist zu sehen, dass die Differenzen zwischen den beiden Ratern und auch zwischen den Ratern und der Software im Allgemeinen dennoch relativ gering waren. Die drei Netze liegen, im Ganzen betrachtet, relativ häufig sehr nah übereinander. Abb. \ref{pic:pic26} zeigt dazu, dass bei lediglich fünf Probanden Differenzen >\SI{10}{\per\minute} zu beobachten sind.\\
-Interessant ist allerdings, dass in Abb. \ref{pic:pic17} bei Probandin 6w ein solch eindeutiger Anstieg des \gls{EQCO2} zu sehen ist, Abb. \ref{subpic:pic3} jedoch entnehmbar ist, dass zwischen Rater 1 und Rater 2 sowie der Software eine relativ große Differenz bei der Schwellenbestimmung existiert. Rater 1 detektierte die VT2 eine Stufe früher, wo in Abb. \ref{pic:pic17} bereits ein \gls{EQCO2}-Anstieg in der orangen Kurve zu sehen ist. Dieser war für Rater 2 eventuell noch nicht signifikant. Die Software bestimmte die VT2 später, da der Wert mit den Referenzdaten der HUNT 3 Studie mehr übereinstimmte. Die Mittelung der Werte je Stufe könnte hier zu einem leichten Anstieg zwischen zwei Messpunkten führen, der noch nicht auf das Exzess-\gls{CO2} zurückzuführen ist. Die Oxygen Delay Time $\tau$ zwischen Steigerung der Leistung zu Beginn einer neuen Stufe und der respiratorischen Reaktion beträgt bei kleinen Inkrementen ca. \SI{45}{\second}~\cite{Kroidl.2015}. Bei einer Stufendauer von \SI{2}{\minute} ist somit annehmbar, dass die physiologische Reaktion auf die Leistungssteigerung zu Beginn der Respirationsmessung nach \SI{90}{\second} bereits eingetreten ist und der Anstieg des \gls{EQCO2} könnte auf das Exzess-\gls{CO2} zurückzuführen sein. Vergleicht man die VT2 von Rater 1 bei \SI{130}{\per\minute} mit der \gls{HFmax} der Probandin bei \SI{178}{\per\minute}, entspricht die Schwelle 73~\%~\gls{HFmax}. Laut der HUNT 3 Studie liegt die durchschnittliche VT2 für gesunde Frauen zwischen 40 und 49 Jahren bei 90~\%~\gls{HFmax}$\pm$6~\%. Dementsprechend ist die VT2 von Rater 1 zu früh bestimmt worden.\\
+Die Regressionsgerade in Abb. \ref{pic:pic28} zeigt die hohe Korrelation mit dem Bestimmtheitsmaß $R^2 = 0,83$ zwischen Ratern und Software bei der mit \gls{EQCO2} bestimmten VT2 noch einmal grafisch. Dieses Maß liegt stets zwischen null und eins und gibt als relative Größe den Zusammenhang zwischen den Ergebnissen an. Bei $R^2 = 1$ bestünde ein perfekter linearer Zusammenhang. Mit $R^2 = 0,83$ geht der Ist-Wert mehr in Richtung eins und ist deshalb akzeptabel.\\
+Einen guten Plot stellt beispielhaft Abb. \ref{pic:pic20} dar, bei der ein deutlicher Anstieg der \gls{EQCO2}-Kurve beobachtet werden kann. In Abb. \ref{subpic:pic3} ist zu sehen, dass die Differenzen zwischen den beiden Ratern und auch zwischen den Ratern und der Software im Allgemeinen dennoch relativ gering waren. Die drei Netze liegen häufig sehr nah übereinander. Abb. \ref{pic:pic26} zeigt dazu, dass bei lediglich fünf Probanden Differenzen >\SI{10}{\per\minute} zu beobachten sind.\\
+Eine solch geringe Differenz wirkt sich auf die Trainingszonenbestimmung wenig aus, was anhand eines Beispiels mit Proband 11m gezeigt wird. Rater 1 bestimmte die VT2 bei \SI{149}{\per\minute}, Rater 2 bei \SI{160}{\per\minute} und die Software bei \SI{162}{\per\minute}. Mit dem neuen Modell werden die Trainingszonen in Abhängigkeit von VT2, wie in Tab. \ref{tab:tabelle9} folgt, definiert. 
+%
+\begin{table}[H]
+	\begin{center}
+		\caption{Angepasstes Trainingszonenmodell nach Wilfried Kindermann}
+		\medskip
+		\begin{tabulary}{\textwidth}{L L}
+			\toprule
+			Trainingszone & Herzfrequenzbereich \\
+			\midrule
+			\midrule
+			\gls{REKOM} & <70 \% VT2 \\
+			\gls{GA1} & 70-90 \% VT2 \\
+			\gls{GA2} & 90-95 \% VT2 \\
+			\gls{EW} & 95-105 \% VT2 \\
+			Leistung & >105 \% VT2 \\
+			\bottomrule
+		\end{tabulary}
+		\label{tab:tabelle9}
+	\end{center}
+\end{table}
+%
+
+In Abb. \ref{pic:pic17} für Probandin 6w ist allerdings ein eindeutiger Anstieg des \gls{EQCO2} zu sehen, obwohl Abb. \ref{subpic:pic3} entnommen werden kann, dass zwischen Rater 1 und Rater 2 sowie der Software eine relativ große Differenz bei der Schwellenbestimmung existiert. Rater 1 detektierte die VT2 eine Stufe früher, wo in Abb. \ref{pic:pic17} bereits ein \gls{EQCO2}-Anstieg in der orangen Kurve zu sehen ist. Dieser war für Rater 2 eventuell noch nicht signifikant. Die Software bestimmte die VT2 später, da der Wert mit den Referenzdaten der HUNT 3 Studie mehr übereinstimmte. Die Mittelung der Werte je Stufe könnte hier zu einem leichten Anstieg zwischen zwei Messpunkten führen, der noch nicht auf das Exzess-\gls{CO2} zurückzuführen ist. Die Oxygen Delay Time $\tau$ zwischen Steigerung der Leistung zu Beginn einer neuen Stufe und der respiratorischen Reaktion beträgt bei kleinen Inkrementen ca. \SI{45}{\second}~\cite{Kroidl.2015}. Bei einer Stufendauer von \SI{2}{\minute} ist somit annehmbar, dass die physiologische Reaktion auf die Leistungssteigerung zu Beginn der Respirationsmessung nach \SI{90}{\second} bereits eingetreten ist und der Anstieg des \gls{EQCO2} könnte auf das Exzess-\gls{CO2} zurückzuführen sein. Vergleicht man die VT2 von Rater 1 bei \SI{130}{\per\minute} mit der \gls{HFmax} der Probandin bei \SI{178}{\per\minute}, entspricht die Schwelle 73~\%~\gls{HFmax}. Laut der HUNT 3 Studie liegt die durchschnittliche VT2 für gesunde Frauen zwischen 40 und 49 Jahren bei 90~\%~\gls{HFmax}$\pm$6~\%. Dementsprechend ist die VT2 von Rater 1 zu früh bestimmt worden.\\
 Es gab wenige kritische \gls{EQCO2}-Kurven, in denen wechselnde Schwankungen zwischen positiver und negativer Steigung auftraten, sodass bei der optischen Auswertung die entscheidende \gls{EQCO2}-Zunahme nicht einfach erkennbar war. Dies ist beispielsweise bei Proband 8m in Abb. \ref{pic:pic18} der Fall. Die Kurve steigt im letzten Drittel des Plots zweimal an und fällt dazwischen einmal. Infolgedessen kam es zu unterschiedlichen Bestimmungen der VT2 durch die Rater, wie Abb. \ref{subpic:pic3} zeigt.
 %
 \subsection{\gls{VE}/\gls{VCO2} als geeignete Referenzmethode}
